--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -24,6 +24,26 @@
           href: storage-ruby-how-to-use-queue-storage.md
         - name: PowerShell
           href: storage-powershell-how-to-use-queues.md
+- name: Begrepp
+  items:
+    - name: Auktorisering
+      href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+      items:
+        - name: Autentisera med Azure AD
+          href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+          items:
+            - name: Hantera åtkomstbehörighet med RBAC
+              href: ../common/storage-auth-aad-rbac.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Autentisera från ett program
+              href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Autentisera från en hanterad tjänstidentitet
+              href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Använda en Azure AD-identitet med CLI eller PowerShell
+              href: ../common/storage-auth-aad-script.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: Auktorisera med delad nyckel
+          href: /rest/api/storageservices/authenticate-with-shared-key
+        - name: Auktorisera med SAS
+          href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
 - name: Gör så här för att
   items:
     - name: Planera och designa
@@ -101,13 +121,13 @@
         - name: Mått och loggning
           items:
             - name: Mått i Azure Monitor
-              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Migrera till nya mått
-              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Lagringsanalys
-              href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Aktivera och visa mått (klassisk)
-              href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Exempel
       href: 'https://azure.microsoft.com/documentation/samples/?service=storage&term=queue'
 - name: Referens
@@ -131,13 +151,13 @@
         - name: Resource Manager
           href: 'https://docs.microsoft.com/java/api/overview/azure/storage/managementapi'
     - name: Node.js
-      href: 'http://azure.github.io/azure-storage-node'
+      href: 'https://docs.microsoft.com/javascript/api/overview/azure/storage'
     - name: Ruby
       href: 'http://azure.github.io/azure-storage-ruby'
     - name: PHP
       href: 'http://azure.github.io/azure-storage-php/'
     - name: Python
-      href: 'https://azure-storage.readthedocs.io/en/latest/index.html'
+      href: 'https://docs.microsoft.com/python/api/overview/azure/storage'
     - name: C++
       href: 'http://azure.github.io/azure-storage-cpp'
     - name: iOS
@@ -161,7 +181,7 @@
     - name: Forum
       href: 'https://social.msdn.microsoft.com/forums/azure/home?forum=windowsazuredata'
     - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/storage/blobs/'
+      href: 'https://azure.microsoft.com/pricing/details/storage/queues/'
     - name: Priskalkylator
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Tjänstuppdateringar
