--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -113,7 +113,7 @@
     - name: Batch AI
       tocHref: /azure/batch-ai/
       topicHref: /azure/batch-ai/
-    - name: Fakturering
+    - name: Fakturering och kostnadshantering
       tocHref: /azure/billing/
       topicHref: /azure/billing/
     - name: Biztalk Services
