--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -73,10 +73,15 @@
       href: azure-web-sites-web-hosting-plans-in-depth-overview.md
     - name: OS-funktioner
       href: web-sites-available-operating-system-functionality.md
+    - name: Säkerhet
+      href: app-service-security.md
+      items:
+        - name: Autentisering och auktorisering
+          href: app-service-authentication-overview.md
+        - name: Uppdatering av operativsystem och körning
+          href: app-service-patch-os-runtime.md
     - name: Inkommande och utgående IP-adresser
       href: app-service-ip-addresses.md
-    - name: Autentisering och auktorisering
-      href: app-service-authentication-overview.md
     - name: Hybridanslutningar
       href: app-service-hybrid-connections.md
     - name: Traffic Manager-integrering
@@ -85,8 +90,6 @@
       href: app-service-local-cache-overview.md
     - name: Diagnostik
       href: app-service-diagnostics.md
-    - name: Uppdatering av operativsystem och körning
-      href: app-service-patch-os-runtime.md
 - name: Instruktionsguider
   items:
     - name: Konfigurera app
