--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -268,6 +268,8 @@
           href: app-insights-export-power-bi.md
     - name: Skydda
       items:
+        - name: Hantering av personliga uppgifter
+          href: app-insights-customer-data.md
         - name: 'Datainsamling, kvarhållning och lagring'
           href: app-insights-data-retention-privacy.md
         - name: 'Resurser, roller och åtkomstkontroll'
