--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -13,11 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 07/26/2017
   ms.author: carolz
-  ms.openlocfilehash: 29d6c0c23202dc0b980d5889a324a0c10944e314
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: dc21a3a7a75035c253213bcb7f2e3f033c54b54c
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34609733"
 abstract:
   description: Azure Container Instances erbjuder det snabbaste och enklaste sättet att köra en behållare i Azure, utan att behöva etablera några virtuella datorer och utan att behöva använda en tjänst på högre nivå. Lär dig hur du skapar och hanterar behållarinstanser med våra snabbstarter, självstudier och exempel.<p>Om du behöver en fullständig lösning för behållarinitiering kan du läsa <a href="/azure/aks/">dokumentationen om Azure Kubernetes Service (AKS)</a>.</p>
 sections:
@@ -59,6 +60,6 @@ sections:
     - title: Kommandorad
       html: <p><a href="/cli/azure/container">Azure CLI</a></p><p><a href="/powershell/module/azurerm.containerinstance#container_instances">PowerShell</a></p>
     - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/containerinstances">.NET</a></p><p><a href="/python/api/overview/azure/containerinstance">Python</a></p><p><a href="/java/api/overview/azure/containerinstance">Java</a></p><p><a href="/javascript/api/overview/azure/containerinstances">Node.js</a></p>
+      html: <p><a href="/dotnet/api/overview/azure/containerinstance">.NET</a></p><p><a href="/python/api/overview/azure/containerinstance">Python</a></p><p><a href="/java/api/overview/azure/containerinstance">Java</a></p><p><a href="/javascript/api/overview/azure/containerinstances">Node.js</a></p>
     - title: REST
       html: <p><a href="/rest/api/container-instances">REST API-referens</a></p><p><a href="/azure/templates/microsoft.containerinstance/containergroups">Resource Manager-mall</a></p>
