--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -125,7 +125,7 @@
   items:
     - name: Lösningar
       items:
-        - name: Förinställda lösningar för IoT Suite
+        - name: IoT-lösningsacceleratorer
           href: /azure/iot-suite
         - name: IoT Central
           href: 'https://docs.microsoft.com/microsoft-iot-central/'
