--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -162,6 +162,8 @@
               href: app-insights-proactive-low-utilization-cloud-resources.md
             - name: Säkerhetsidentifiering
               href: app-insights-proactive-application-security-detection-pack.md
+            - name: Azure Cloud Services
+              href: app-insights-proactive-cloud-services.md
         - name: Skapa en resurs
           href: app-insights-create-new-resource.md
     - name: Analysera
