--- a/articles/machine-learning/team-data-science-process/index.yml
+++ b/articles/machine-learning/team-data-science-process/index.yml
@@ -8,16 +8,18 @@ metadata:
   author: bradsev
   manager: cgronlun
   ms.service: machine-learning
+  ms.component: team-data-science-process
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 01/18/2018
   ms.author: bradsev
-  ms.openlocfilehash: 232b4a1e4ef6fdb4c8d07234c2ae988e3e1f3650
-  ms.sourcegitcommit: e2adef58c03b0a780173df2d988907b5cb809c82
+  ms.openlocfilehash: ceacb3138fdaf15a2c616aea2cdf55a73e0b73bf
+  ms.sourcegitcommit: 944d16bc74de29fb2643b0576a20cbd7e437cef2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/28/2018
+  ms.lasthandoff: 06/07/2018
+  ms.locfileid: "34837522"
 abstract:
   description: Team Data Science Process är en flexibel, iterativ datavetenskapsmetod för att leverera prediktiva analyslösningar och intelligenta program effektivt. TDSP hjälper till att förbättra samarbete mellan grupper och inlärning. Du får de bästa metodtipsen och strukturerna från Microsoft och andra i branschen, vilket underlättar implementeringen av datavetenskapsinitiativ. Målet är att hjälpa företag att dra nytta av sina analysprogram fullt ut.
 sections:
