--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -50,8 +50,6 @@
   items:
     - name: Hantera
       items:
-        - name: Uppdatera ett jobb
-          href: stream-analytics-job-reliability.md
         - name: Uppdatera autentiseringsuppgifter
           href: stream-analytics-login-credentials-inputs-outputs.md
         - name: Konfigurera varningar
@@ -60,6 +58,10 @@
           href: stream-analytics-test-query.md
         - name: Visa resultat på en instrumentpanel
           href: stream-analytics-power-bi-dashboard.md
+        - name: Rensa ditt jobb
+          href: stream-analytics-clean-up-your-job.md
+        - name: Koppla jobb för tillförlitlighet
+          href: stream-analytics-job-reliability.md
     - name: Skapa lösningar
       items:
         - name: Twitter-attitydanalys
