--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -141,6 +141,8 @@
           href: functions-run-local.md
         - name: Visual Studio-utveckling
           href: functions-develop-vs.md
+        - name: Hantera anslutningar
+          href: manage-connections.md
         - name: Felhantering
           href: functions-bindings-error-pages.md
     - name: Distribuera
@@ -200,7 +202,11 @@
         - name: Blob Storage
           href: functions-bindings-storage-blob.md
         - name: Azure Cosmos DB
-          href: functions-bindings-cosmosdb.md
+          items:
+            - name: Functions 1.x
+              href: functions-bindings-cosmosdb.md
+            - name: Functions 2.x
+              href: functions-bindings-cosmosdb-v2.md
         - name: Event Grid
           href: functions-bindings-event-grid.md
         - name: Event Hubs
