--- a/articles/azure-policy/toc.yml
+++ b/articles/azure-policy/toc.yml
@@ -17,26 +17,50 @@
   items:
     - name: Skapa och hantera Azure Policy
       href: create-manage-policy.md
+    - name: Utforska Azure Policy (praktiska labbövningar)
+      href: 'https://www.microsoft.com/handsonlabs/SelfPacedLabs/?storyId=story://Content-Private/content/sp-azuregovernance/1-azpolicy/a-policy'
 - name: Exempel
   items:
-    - name: Principmallar
+    - name: Azure Policy-exempel
       href: json-samples.md
 - name: Begrepp
   items:
     - name: Azure Policy-definitionsstruktur
       href: policy-definition.md
+    - name: Förstå Policy-effekter
+      href: policy-effects.md
 - name: Instruktionsguider
   items:
     - name: Skapa principer programmässigt
       href: policy-insights.md
+    - name: Samla in data för efterlevnad
+      href: policy-compliance.md
 - name: Referens
   items:
     - name: Azure CLI
       href: /cli/azure/policy
     - name: Azure PowerShell
       href: '/powershell/module/azurerm.resources/#policies'
+    - name: REST-API
+      items:
+        - name: Händelser
+          href: /rest/api/policy-insights/policyevents
+        - name: Tillstånd
+          href: /rest/api/policy-insights/policystates
+        - name: Tilldelningar
+          href: /rest/api/resources/policyassignments
+        - name: Principdefinitioner
+          href: /rest/api/resources/policydefinitions
+        - name: Initiativdefinitioner
+          href: /rest/api/resources/policysetdefinitions
 - name: Resurser
   items:
+    - name: GitHub – Azure Policy-exempel
+      href: 'https://github.com/Azure/azure-policy'
+    - name: Video – Build 2018
+      href: 'https://channel9.msdn.com/events/Build/2018/THR2030'
+    - name: Video – Ignite 2017
+      href: 'https://myignite.microsoft.com/videos/54781'
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Priskalkylator
