--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -162,6 +162,8 @@ items:
                 href: sql-api-python-samples.md
               - name: Java-exempel
                 href: sql-api-java-samples.md
+              - name: Async Java-exempel
+                href: sql-api-async-java-samples.md
           - name: Begrepp
             items:
               - name: Resurser
@@ -472,6 +474,8 @@ items:
         href: manage-account-with-powershell.md
       - name: Hantera Storage Explorer
         href: storage-explorer.md
+      - name: Skrivare för flera regioner
+        href: multi-master-workaround.md
   - name: Resurser
     items:
       - name: Hantera Storage Explorer
