--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -10,18 +10,26 @@
       href: quickstart-create-basic-load-balancer-portal.md
     - name: Skapa en Basic Load Balancer – Azure CLI
       href: quickstart-create-basic-load-balancer-cli.md
+    - name: Skapa en Basic Load Balancer – Azure PowerShell
+      href: quickstart-create-basic-load-balancer-powershell.md
     - name: Skapa en Standard Load Balancer – Portal
       href: quickstart-load-balancer-standard-public-portal.md
     - name: Skapa en Standard Load Balancer – Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
+    - name: Skapa en Standard Load Balancer – Azure PowerShell
+      href: quickstart-create-standard-load-balancer-powershell.md
 - name: Självstudier
   items:
+    - name: Skapa och hantera Load Balancer
+      href: tutorial-load-balancer-standard-manage-portal.md
     - name: Belastningsutjämna intern trafik till virtuella datorer
       href: tutorial-load-balancer-basic-internal-portal.md
     - name: Belastningsutjämna virtuella datorer mellan tillgänglighetszoner
       href: tutorial-load-balancer-standard-public-zone-redundant-portal.md
     - name: Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon
       href: tutorial-load-balancer-standard-public-zonal-portal.md
+    - name: Konfigurera portvidarebefordran i Load Balancer
+      href: tutorial-load-balancer-port-forwarding-portal.md
 - name: Exempel
   items:
     - name: Azure CLI
