--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -155,6 +155,8 @@
               href: 'https://docs.microsoft.com/python/api/overview/azure-machine-learning/computer-vision'
             - name: Skapa och distribuera bildklassificeringsmodeller
               href: how-to-build-deploy-image-classification-models.md
+            - name: Skapa och distribuera modeller för objektidentifiering
+              href: how-to-build-deploy-object-detection-models.md
             - name: Modellnoggrannhet
               href: how-to-improve-accuracy-for-computer-vision-models.md
         - name: Prognosticering
@@ -219,6 +221,8 @@
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Problem och felsökning
       href: known-issues-and-troubleshooting-guide.md
+    - name: Exportera eller ta bort kontodata
+      href: ../desktop-workbench/export-delete-experimentation-model-management-data-dsr.md
     - name: Support och utbildning
       href: support-for-aml-services.md
     - name: Azure-översikt
