--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -433,6 +433,8 @@
           href: service-fabric-visualstudio-configure-secure-connections.md
         - name: Felsöka en .NET-tjänst i VS
           href: service-fabric-debugging-your-application.md
+        - name: Felsöka Windows-behållare med Service Fabric och VS
+          href: service-fabric-how-to-debug-windows-containers.md
         - name: Vanliga fel och undantag
           href: service-fabric-errors-and-exceptions.md
         - name: Övervaka och diagnostisera lokalt
@@ -521,12 +523,18 @@
                   href: service-fabric-cluster-creation-via-arm.md
                 - name: Kluster med unika namn för certifikat
                   href: service-fabric-create-cluster-using-cert-cn.md
+                - name: Aktivera diskkryptering för Windows
+                  href: service-fabric-enable-azure-disk-encryption-windows.md
+                - name: Aktivera diskkryptering för Linux
+                  href: service-fabric-enable-azure-disk-encryption-linux.md
             - name: Skala
               items:
-                - name: Manuellt
+                - name: Skala ut manuellt
                   href: service-fabric-cluster-scale-up-down.md
-                - name: Programmässigt
+                - name: Skala ut programmässigt
                   href: service-fabric-cluster-programmatic-scaling.md
+                - name: Skala upp virtuella datorer med primär nodtyp
+                  href: service-fabric-cluster-upgrade-primary-nodetype-vm.md
             - name: Uppgradera
               href: service-fabric-cluster-upgrade.md
             - name: Ange åtkomstkontroll
@@ -599,10 +607,10 @@
               href: service-fabric-diagnostics-event-analysis-oms.md
         - name: Övervaka infrastruktur
           items:
-            - name: Prestandaövervakning med WAD
-              href: service-fabric-diagnostics-perf-wad.md
             - name: Prestandaövervakning med OMS-agenten
               href: service-fabric-diagnostics-oms-agent.md
+            - name: Prestandaövervakning med WAD
+              href: service-fabric-diagnostics-perf-wad.md
         - name: Övervaka hälsa
           items:
             - name: Rapportera och kontrollera hälsa
@@ -613,6 +621,8 @@
               href: service-fabric-view-entities-aggregated-health.md
         - name: Felsök ditt lokala kluster
           href: service-fabric-troubleshoot-local-cluster-setup.md
+        - name: Diagnosticera vanliga scenarier
+          href: service-fabric-diagnostics-common-scenarios.md
 - name: Referens
   items:
     - name: Azure PowerShell
@@ -628,20 +638,29 @@
           href: service-fabric-sfctl-application.md
         - name: sfctl chaos
           href: service-fabric-sfctl-chaos.md
+          items:
+            - name: sfctl chaos schedule
+              href: service-fabric-sfctl-chaos-schedule.md
         - name: sfctl cluster
           href: service-fabric-sfctl-cluster.md
         - name: sfctl compose
           href: service-fabric-sfctl-compose.md
+        - name: sfctl container
+          href: service-fabric-sfctl-container.md
         - name: sfctl is
           href: service-fabric-sfctl-is.md
         - name: sfctl node
           href: service-fabric-sfctl-node.md
         - name: sfctl partition
           href: service-fabric-sfctl-partition.md
+        - name: sfctl property
+          href: service-fabric-sfctl-property.md
         - name: sfctl replica
           href: service-fabric-sfctl-replica.md
         - name: sfctl rpm
           href: service-fabric-sfctl-rpm.md
+        - name: sfctl sa-cluster
+          href: service-fabric-sfctl-sa-cluster.md
         - name: sfctl service
           href: service-fabric-sfctl-service.md
         - name: sfctl store
