--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -10,6 +10,8 @@
   items:
     - name: Maj 2018
       href: release-notes-may-2018.md
+    - name: April 2018
+      href: release-notes-april-2018.md
 - name: Snabbstarter
   expanded: true
   items:
