--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -78,22 +78,43 @@
       href: storage-samples-blobs-cli.md
 - name: Begrepp
   items:
-    - name: Planera och designa
+    - name: Lagringskonton
       items:
-        - name: Alternativ för lagringskontot
+        - name: Översikt över lagringskonto
           href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Dataredundans
+        - name: Auktorisering
+          href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
           items:
-            - name: Översikt över redundans
-              href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Autentisera med Azure AD
+              href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              items:
+                - name: Hantera åtkomstbehörighet med RBAC
+                  href: ../common/storage-auth-aad-rbac.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Autentisera från ett program
+                  href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Autentisera från en hanterad tjänstidentitet
+                  href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Använda en Azure AD-identitet med CLI eller PowerShell
+                  href: ../common/storage-auth-aad-script.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Auktorisera med delad nyckel
+              href: /rest/api/storageservices/authenticate-with-shared-key
+            - name: Auktorisera med SAS
+              href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Anonym åtkomst till blobar
+              href: storage-manage-access-to-resources.md
+        - name: Dataredundans
+          href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          items:
             - name: Lokalt redundant lagring
               href: ../common/storage-redundancy-lrs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Zonredundant lagring
               href: ../common/storage-redundancy-zrs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Geografiskt redundant lagring
               href: ../common/storage-redundancy-grs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 'Nivåerna Frekvent, Lågfrekvent och Arkiv'
+        - name: Åtkomstnivåer
           href: storage-blob-storage-tiers.md
+        - name: Hantera Azure Blob Storage-livscykeln
+          href: ../common/storage-lifecycle-managment-concepts.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Reagerar på händelser
           href: storage-blob-event-overview.md
         - name: Mål för skalbarhet och prestanda
@@ -165,12 +186,6 @@
           href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Kräv säker överföring
           href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Autentisering med delad nyckel
-          href: /rest/api/storageservices/Authentication-for-the-Azure-Storage-Services
-        - name: Signaturer för delad åtkomst (SAS)
-          href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Anonym åtkomst till blobar
-          href: storage-manage-access-to-resources.md
         - name: Använda Azure CDN för att få åtkomst till blobar med anpassade domäner över https
           href: storage-https-custom-domain-cdn.md
     - name: Övervaka och felsök
@@ -189,6 +204,79 @@
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Aktivera och visa mått (klassisk)
               href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+    - name: Importera/exportera data
+      href: ../common/storage-import-export-service.md
+      items:
+        - name: Granska krav
+          href: ../common/storage-import-export-requirements.md
+        - name: Importera data till blobar
+          href: ../common/storage-import-export-data-to-blobs.md
+        - name: Importera data till filer
+          href: ../common/storage-import-export-data-to-files.md
+        - name: Exportera data från blobar
+          href: ../common/storage-import-export-data-from-blobs.md
+        - name: Så här gör du
+          items:
+            - name: Visa enhetsstatus
+              href: ../common/storage-import-export-view-drive-status.md
+            - name: Granska jobbstatus
+              href: ../common/storage-import-export-tool-reviewing-job-status-v1.md
+            - name: Reparera importjobb
+              href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md
+            - name: Reparera exportjobb
+              href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md
+        - name: VANLIGA FRÅGOR OCH SVAR
+          href: ../common/storage-import-export-service-faq.md
+        - name: REST-API
+          href: 'https://docs.microsoft.com/rest/api/storageimportexport/jobs'
+        - name: Kontakta supporten
+          href: ../common/storage-import-export-contact-microsoft-support.md
+        - name: Arkiv
+          items:
+            - name: Förbereda enheter för import (v1)
+              href: ../common/storage-import-export-tool-preparing-hard-drives-import-v1.md
+              items:
+                - name: Ställ in egenskaper och metadata
+                  href: ../common/storage-import-export-tool-setting-properties-metadata-import-v1.md
+                - name: Exempel – förbereda enheter för import
+                  href: ../common/storage-import-export-tool-sample-preparing-hard-drives-import-job-workflow-v1.md
+                - name: Snabbkommandoreferens för import
+                  href: ../common/storage-import-export-tool-quick-reference-v1.md
+            - name: Förbereda enheter för import (v2)
+              href: ../common/storage-import-export-tool-preparing-hard-drives-import.md
+              items:
+                - name: Ställ in egenskaper och metadata
+                  href: ../common/storage-import-export-tool-setting-properties-metadata-import-v1.md
+                - name: Exempel – förbereda enheter för import
+                  href: ../common/storage-import-export-tool-sample-preparing-hard-drives-import-job-workflow-v1.md
+                - name: Snabbkommandoreferens för import
+                  href: ../common/storage-import-export-tool-quick-reference-v1.md
+            - name: Skapa importjobb
+              href: ../common/storage-import-export-creating-an-import-job.md
+            - name: Skapa exportjobb
+              href: ../common/storage-import-export-creating-an-import-job.md
+            - name: Hämta jobbstatus
+              href: ../common/storage-import-export-retrieving-state-info-for-a-job.md
+            - name: Skapa exportjobb
+              href: ../common/storage-import-export-creating-an-import-job.md
+            - name: Räkna upp jobb
+              href: ../common/storage-import-export-enumerating-jobs.md
+            - name: Avbryta och ta bort jobb
+              href: ../common/storage-import-export-cancelling-and-deleting-jobs.md
+            - name: Säkerhetskopiera enhetsmanifest
+              href: ../common/storage-import-export-backing-up-drive-manifests.md
+            - name: Räkna upp jobb
+              href: ../common/storage-import-export-enumerating-jobs.md
+            - name: Diagnostik och felåterställning
+              href: ../common/storage-import-export-diagnostics-and-error-recovery.md
+            - name: Kommandon för importjobb
+              href: ../common/storage-import-export-tool-quick-reference-v1.md
+            - name: Tjänstmanifestfil
+              href: ../common/storage-import-export-file-format-manifest.md
+            - name: Tjänstens metadata och egenskapers filformat
+              href: ../common/storage-import-export-file-format-metadata-and-properties.md
+            - name: Tjänsteloggfil
+              href: ../common/storage-import-export-file-format-log.md
 - name: Gör så här för att
   items:
     - name: skapar ett lagringskonto
@@ -251,87 +339,6 @@
           href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Montera Blob Storage som ett filsystem i Linux
           href: storage-how-to-mount-container-linux.md
-        - name: Använd Import/Export-tjänsten
-          href: ../common/storage-import-export-service.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Använd Import/Export-verktyget
-          href: ../common/storage-import-export-tool-how-to.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-          items:
-            - name: Konfigurera Import/Export-verktyget
-              href: ../common/storage-import-export-tool-setup.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Förbereda hårddiskar för ett importjobb
-              href: ../common/storage-import-export-tool-preparing-hard-drives-import.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-              items:
-                - name: Konfigurera egenskaper och metadata under importeringsprocessen
-                  href: ../common/storage-import-export-tool-setting-properties-metadata-import.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Exempelarbetsflöde för att förbereda hårddiskar för ett importjobb
-                  href: ../common/storage-import-export-tool-sample-preparing-hard-drives-import-job-workflow.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Snabbreferens för ofta använda kommandon för importjobb
-                  href: ../common/storage-import-export-tool-quick-reference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Förhandsgranska diskanvändning för ett exportjobb
-              href: ../common/storage-import-export-tool-previewing-drive-usage-export-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Granska jobbstatus med kopiera loggfiler
-              href: ../common/storage-import-export-tool-reviewing-job-status-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Reparera ett importjobb
-              href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Reparera ett exportjobb
-              href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Felsökning av Import/Export-verktyget
-              href: ../common/storage-import-export-tool-troubleshooting-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Manifestfilformat för Import/Export-tjänsten
-              href: ../common/storage-import-export-file-format-manifest.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Import/Export-tjänstens metadata och egenskapers filformat
-              href: ../common/storage-import-export-file-format-metadata-and-properties.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Loggfilformat för Import/Export-tjänsten
-              href: ../common/storage-import-export-file-format-log.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Använda Import/Export-verktyget (v1)
-          href: ../common/storage-import-export-tool-how-to-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-          items:
-            - name: Konfigurera Import/Export-verktyget
-              href: ../common/storage-import-export-tool-setup-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Förbereda hårddiskar för ett importjobb
-              href: ../common/storage-import-export-tool-preparing-hard-drives-import-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-              items:
-                - name: Konfigurera egenskaper och metadata under importeringsprocessen
-                  href: ../common/storage-import-export-tool-setting-properties-metadata-import-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Exempelarbetsflöde för att förbereda hårddiskar för ett importjobb
-                  href: ../common/storage-import-export-tool-sample-preparing-hard-drives-import-job-workflow-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Snabbreferens för ofta använda kommandon för importjobb
-                  href: ../common/storage-import-export-tool-quick-reference-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Förhandsgranska diskanvändning för ett exportjobb
-              href: ../common/storage-import-export-tool-previewing-drive-usage-export-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Granska jobbstatus med kopiera loggfiler
-              href: ../common/storage-import-export-tool-reviewing-job-status-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Reparera ett importjobb
-              href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Reparera ett exportjobb
-              href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Felsökning av Import/Export-verktyget
-              href: ../common/storage-import-export-tool-troubleshooting-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Manifestfilformat för Import/Export-tjänsten
-              href: ../common/storage-import-export-file-format-manifest.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Import/Export-tjänstens metadata och egenskapers filformat
-              href: ../common/storage-import-export-file-format-metadata-and-properties.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Loggfilformat för Import/Export-tjänsten
-              href: ../common/storage-import-export-file-format-log.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Använda REST-API för Azure Import/Export-tjänsten
-          href: ../common/storage-import-export-using-the-rest-api.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-          items:
-            - name: Skapa ett importjobb
-              href: ../common/storage-import-export-creating-an-import-job.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Skapa ett exportjobb
-              href: ../common/storage-import-export-creating-an-export-job.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Hämta statusinformation för ett jobb
-              href: ../common/storage-import-export-retrieving-state-info-for-a-job.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Räkna upp jobb
-              href: ../common/storage-import-export-enumerating-jobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Avbryta och ta bort jobb
-              href: ../common/storage-import-export-cancelling-and-deleting-jobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Säkerhetskopiera enhetsmanifest
-              href: ../common/storage-import-export-backing-up-drive-manifests.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Diagnostik och felåterställning av Import/Export-jobb
-              href: ../common/storage-import-export-diagnostics-and-error-recovery.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Kontakta supporten för Import/Export
-          href: ../common/storage-import-export-contact-microsoft-support.md
         - name: Vanliga frågor och svar om lagringsmigrering
           href: ../common/storage-migration-faq.md
 - name: Referens
